<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云宿</string>
    <string name="rb_s_0">推荐</string>
    <string name="rb_s_1">全部</string>
    <string name="rb_s_2">行程</string>
    <string name="rb_s_3">订单</string>
    <string name="rb_s_4">账户</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>