<?xml version="1.0" encoding="utf-8"?>
<!-- 主页 -->
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb0"
                style="@style/radio_btn"
                android:checked="true"
                android:drawableTop="@drawable/rbtn_m0_selector"
                android:text="@string/rb_s_0" />

            <RadioButton
                android:id="@+id/rb1"
                style="@style/radio_btn"
                android:drawableTop="@drawable/rbtn_m1_selector"
                android:text="@string/rb_s_1" />

            <RadioButton
                android:id="@+id/rb2"
                style="@style/radio_btn"
                android:drawableTop="@drawable/rbtn_m2_selector"
                android:text="@string/rb_s_2" />

            <RadioButton
                android:id="@+id/rb3"
                style="@style/radio_btn"
                android:drawableTop="@drawable/rbtn_m3_selector"
                android:text="@string/rb_s_3" />

            <RadioButton
                android:id="@+id/rb4"
                style="@style/radio_btn"
                android:drawableTop="@drawable/rbtn_m4_selector"
                android:text="@string/rb_s_4" />
        </RadioGroup>
    </LinearLayout>

</TabHost>